# TCPtools

./: .gitignore  README.md  Trabalho Redes.docx
ClientTCP/: CMakeLists.txt
ClientTCP/ClientTCP/: CMakeLists.txt  ClientTCP.cpp  ClientTCP.h
ServerTCP/: CMakeLists.txt  Logger.h  Main.cpp  ServerTCP.cpp  ServerTCP.h
ServerTCP/ServerTCP/: CMakeLists.txt  ServerTCP.cpp
TcpUtils/: CMakeLists.txt
TcpUtils/TcpUtils/: CMakeLists.txt  Logger.h  MessageContent.cpp  TCPClient.cpp  TCPServer.cpp  TcpUtils.cpp  TcpUtils.h
TcpUtils/TcpUtils/Messaging/: IMessage.cpp  Message.cpp
